--- a/acrylicpaint/src/main/res/menu/main.xml
+++ b/acrylicpaint/src/main/res/menu/main.xml
@@ -11,11 +11,25 @@
         android:icon="@drawable/erase"
         android:showAsAction="always"
         android:title="@string/erase" />
+
     <item
         android:id="@+id/palette_menu"
         android:icon="@drawable/palette"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:title="@string/color" />
+
+    <item
+        android:id="@+id/clear_foreground_submenu"
+        android:icon="@drawable/clear"
+        android:showAsAction="always"
+        android:title="@string/clear_foreground" />
+
+    <item
+        android:id="@+id/save_menu"
+        android:icon="@drawable/save"
+        android:showAsAction="always"
+        android:title="@string/save" />
+
     <item
         android:id="@+id/extract_color_menu"
         android:icon="@drawable/extract_color"
@@ -59,10 +73,12 @@
         android:icon="@drawable/clear"
         android:title="@string/clear_options">
         <menu>
+            <!--
             <item
                 android:id="@+id/clear_foreground_submenu"
                 android:showAsAction="never"
                 android:title="@string/clear_foreground" />
+                -->
             <item
                 android:id="@+id/clear_background_submenu"
                 android:showAsAction="never"
@@ -79,11 +95,7 @@
         android:icon="@drawable/import_image"
         android:showAsAction="ifRoom"
         android:title="@string/open_image" />
-    <item
-        android:id="@+id/save_menu"
-        android:icon="@drawable/save"
-        android:showAsAction="ifRoom"
-        android:title="@string/save" />
+
     <item
         android:id="@+id/share_menu"
         android:icon="@drawable/share"
